Add Sign-up pitch to webpage
Main & secondary hero text are added to webpage.

Graphics card image is added to page to make it more appealing.

Sign-up button is added to webpage.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,25 @@
     <title>Landing-page</title>
 </head>
 <body>
-    <div class="header">
-        PC BUILDERS.Co
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Community</a></li>
-        </ul>
+    <div class="part1">
+        <div class="header">
+            PC BUILDERS.Co
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Settings</a></li>
+                <li><a href="#">Community</a></li>
+            </ul>
+        </div>
+        <div class="Sign-up-pitch">
+            <div class="hero">
+                <div class="hero-main">One-stop shop for building your PC</div>
+                <div class="hero-scnd">
+                    We,at PCBUILDERS.Co fulfill your dreams of owning a custom high-performance PC.
+                </div>
+                <button class="Sign-up">Sign up</button>
+            </div>
+            <img class="gcard" src="./gcard-img.jpg" alt="Graphics-card-img">
+        </div>
     </div>
 </body>
 </html>
