Create Main-content of webpage
Perks of customers are added to "Main-content" of page.

An image is attached to each perk to make page more appealing.

Textual context is given for each perk.

--- a/index.html
+++ b/index.html
@@ -28,5 +28,27 @@
             <img class="gcard" src="./gcard-img.jpg" alt="Graphics-card-img">
         </div>
     </div>
+    <div class="part2">
+        Perks of choosing us
+        <div class="Main-content">
+            <div class="Perks">
+                <img class="perks" src="./img/quality-build.jpg" alt="bulding-pc-img">
+                <p>High quality PC builds</p>
+            </div>
+            <div class="Perks">
+                <img class="perks" src="./img/customize-build.jpg" alt="customize-build">
+                <p>Wide range of customizations</p>
+            </div>
+            <div class="Perks">
+                <img class="perks" src="./img/timely-delivery.jpg" alt="Timely-delivery">
+                <p>On time delivery</p>
+            </div>
+            <div class="Perks">
+                <img class="perks" src="./img/warranty.jpg" alt="warranty-icon">
+                <p>1 year warranty on every build</p>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
