Changes to alignment of items in "Main-content"
Heading of "Main-conent" is centered & bolded to increase user engagement.

Items of Main-content is centered to increase user retention.

Space is allocated between each item of Main-content to enhance user experience.

Dimensions of images in Main-content are fixed.

Borders of images are modified to increase user retention.

Textual content of perks are aligned beneath images to improve user engagement.

--- a/index.html
+++ b/index.html
@@ -25,30 +25,25 @@
                 </div>
                 <button class="Sign-up">Sign up</button>
             </div>
-            <img class="gcard" src="./gcard-img.jpg" alt="Graphics-card-img">
+            <img class="gcard" src="./img/gcard-img.jpg" alt="Graphics-card-img">
         </div>
     </div>
     <div class="part2">
-        Perks of choosing us
+        <div class="info-header">Perks of choosing us</div>
         <div class="Main-content">
-            <div class="Perks">
-                <img class="perks" src="./img/quality-build.jpg" alt="bulding-pc-img">
+            <div class="image">
+                <img src="./img/quality-build.jpg" alt="Quality-build-img">
+                <img src="./img/customize-build.jpg" alt="customize-build-img">
+                <img src="./img/timely-delivery.jpg" alt="timely-delivery">
+                <img src="./img/warranty.jpg" alt="warranty-img">
+            </div>
+            <div class="text">
                 <p>High quality PC builds</p>
-            </div>
-            <div class="Perks">
-                <img class="perks" src="./img/customize-build.jpg" alt="customize-build">
-                <p>Wide range of customizations</p>
-            </div>
-            <div class="Perks">
-                <img class="perks" src="./img/timely-delivery.jpg" alt="Timely-delivery">
+                <p>Wide range of customizable options</p>
                 <p>On time delivery</p>
-            </div>
-            <div class="Perks">
-                <img class="perks" src="./img/warranty.jpg" alt="warranty-icon">
                 <p>1 year warranty on every build</p>
             </div>
         </div>
-
     </div>
 </body>
 </html>
