Create customer review section of the page
Textual review along with reviewer's name is added to the page.

--- a/index.html
+++ b/index.html
@@ -45,5 +45,9 @@
             </div>
         </div>
     </div>
+    <div class="part3">
+        <div class="review">I recently purchased a custom PC from PC BUILDERS.Co and I have to say, from the initial consultation to the final product, the team at PC BUILDERS.Co were professional, knowledgeable and attentive to my needs. The PC runs smoothly and handles all of my demanding tasks with ease. I would highly recommend PC BUILDERS.Co to anyone in need of a custom-built PC</div>
+        <div class="by-text">- Elon Musk</div>
+    </div>
 </body>
 </html>
