Create giveaway area of webpage
Heading text is added.

Textual content for giveaway is added.

Sign-up button is added.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
             <div class="review"><em>I recently purchased a custom PC from PC BUILDERS.Co . The PC runs smoothly and handles all of my demanding tasks with ease. I would highly recommend PC BUILDERS.Co to anyone in need of a custom-built PC</em> </div>
             <div class="by-text">- Elon Musk</div>
         </div>
-
+    </div>
+    <div class="giveaway">
+        <div class="heading">Call to action! It's time!</div>
+        <div class="content">Sign up for our giveaway for this new year by clicking button over there!</div>
+        <button class="Sign-up">Sign up</button>
     </div>
 </body>
 </html>
