Change design of giveaway section
Background color of is changed to make it more appealing.

Text color is changed to improve user engagement.

Heading is bolded to attract users.

Text & sign up button is centered to improve user engagement.

Space is allocated between items to improve user experience.

--- a/index.html
+++ b/index.html
@@ -51,10 +51,15 @@
             <div class="by-text">- Elon Musk</div>
         </div>
     </div>
-    <div class="giveaway">
-        <div class="heading">Call to action! It's time!</div>
-        <div class="content">Sign up for our giveaway for this new year by clicking button over there!</div>
-        <button class="Sign-up">Sign up</button>
+    <div class="part4">
+        <div class="giveaway">
+            <div class="giveaway-text">
+                <div class="heading">Call to action! It's time!</div>
+                <div class="content">Sign up for our giveaway for this new year by clicking button over there!</div>
+            </div>
+            <button class="Sign-up">Sign up</button>
+        </div>
     </div>
+
 </body>
 </html>
