Create footer of webpage
Background color is changed to make it more appealing.

Text color is changed to increase retention.

Text is aligned at center of footer to improve user experience.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
             <button class="Sign-up">Sign up</button>
         </div>
     </div>
-
+    <div class="footer">Copyright (c) PCBUILDERS.Co</div>
 </body>
 </html>
