Change grouping and alignment of boxes of part2
Image and text are grouped into same box named "perks" for effective alignment.

Alignment of "perks" is centered along main & cross axis for effective alignment.

Image borders are made distinct to improve user experience.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="part2">
         <div class="info-header">Perks of choosing us</div>
         <div class="Main-content">
-            <div class="image">
+            <!--<div class="image">
                 <img src="./img/quality-build.jpg" alt="Quality-build-img">
                 <img src="./img/customize-build.jpg" alt="customize-build-img">
                 <img src="./img/timely-delivery.jpg" alt="timely-delivery">
@@ -41,6 +41,22 @@
                 <p>High quality PC builds</p>
                 <p>Wide range of customizable options</p>
                 <p>On time delivery</p>
+                <p>1 year warranty on every build</p>
+            </div>-->
+            <div class="perks">
+                <img src="./img/quality-build.jpg" alt="quality-build">
+                <p>High quality PC builds</p>
+            </div>
+            <div class="perks">
+                <img src="./img/customize-build.jpg" alt="customize-build">
+                <p>Wide range of customizable options</p>
+            </div>
+            <div class="perks">
+                <img src="./img/timely-delivery.jpg" alt="timely-delivery">
+                <p>On time delivery</p>
+            </div>
+            <div class="perks">
+                <img src="./img/warranty.jpg" alt="warranty">
                 <p>1 year warranty on every build</p>
             </div>
         </div>
